# ntt-corevo-asr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
